# django-pypprof

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
django_pypprof/: apps.py  urls.py  views.py
